--- a/src/css/patient-info.css
+++ b/src/css/patient-info.css
@@ -105,8 +105,7 @@ a {
     align-items: center;
     justify-content: center;
     background: white;
-    box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.1);
-    border-inline-end: 1px solid #70809063;
+    
 }
 
 /* === MENU ITEMS === */
@@ -126,6 +125,7 @@ a {
     font-size: var(--primary-size);
     color: #708090;
     display: flex;
+    gap: 5px;
     align-items: center;
 }
 
@@ -452,16 +452,17 @@ a {
     width: 70%;
     margin-top: 20px;
     text-align: end;
+    
 }
 
-.sh-pdf-download i {
+.download{
     padding: 10px 30px;
     font-size: 1.5rem;
     color: white;
     border-radius: 5px;
     background: var(--btn-bg-color);
+    cursor: pointer;
 }
-
 /* === MOBILE RESPONSIVE === */
 @media(max-width: 768px) {
 
