--- a/src/css/doctor-profile.css
+++ b/src/css/doctor-profile.css
@@ -362,8 +362,8 @@ a {
     width: 100%;
     padding: 20px;
     display: flex;
-    align-items: end;
-    justify-content: end;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .sh-submit-btn button {
