--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap');
 
 * {
@@ -148,16 +149,20 @@ a {
 
 /* === TOP NAV ITEMS === */
 .sh-doctor-nav-section {
+    top: 0;
     width: 100%;
     height: 80px;
     padding: 0 20px;
+    position: sticky;
     background: white;
     box-shadow: 3px 3px 5px rgb(0, 0, 0, 0.1);
-    top: 0;
-    position: sticky;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.sh-doctor-nav-section:hover .sh-doctor-hover-profile{
+    right: 0;
+    display: block;
 }
 
 /* === DOCTOR NAV LEFT CONTAINER === */
@@ -193,6 +198,8 @@ a {
 /* === DOCTOR NAV RIGHT CONTAINER === */
 .sh-doctor-nav-right-container {
     display: flex;
+    cursor: pointer;
+    position: relative;
     align-items: center;
 }
 
@@ -239,6 +246,36 @@ a {
     border: 1px solid #708090;
 }
 
+/* === DOCTOR POFILE HOVER === */
+.sh-doctor-hover-profile{
+    top: 80px;
+    z-index: 9999;
+    right: 0;
+    display: none;
+    position: absolute;
+    justify-items: end;
+    margin-right: 20px;
+    transition: all 0.3s ease-in-out;
+}
+.sh-doc-cart-container{
+    width: 250px;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+    background: white;
+    border: 1px solid #70809063;
+}
+.sh-doc-hover-image{
+    text-align: center;
+}
+.sh-doc-hover-image img{
+    width: 40%;
+    border-radius: 50%;
+    border: 1px solid red;
+}
+.sh-doc-cart-container a{
+    color: black;
+}
 /*  === FILLTER === */
 .sh-fillter {
     width: 100%;
@@ -309,8 +346,10 @@ a {
 /* === PATIENTS SECTION === */
 .sh-patients-section {
     width: 100%;
-    height: max-content;
     padding: 20px;
+    max-height: 61vh;
+    overflow: hidden;
+    height: max-content;
 }
 
 .sh-patients-section table {
@@ -320,6 +359,7 @@ a {
 
 .sh-patients-section th,
 td {
+    font-size: 13px;
     padding: 10px 15px;
     color: #708090;
     border: 1px solid #70809063;
@@ -338,9 +378,7 @@ td {
 .sh-new-patients h1 {
     font-size: 1.5rem;
     color: #708090;
-    border-bottom: 1px solid #708090;
 }
-
 
 .sh-new-patients input {
     width: 25%;
@@ -386,23 +424,22 @@ td {
 .sh-delete-btn {
     color: #b22222b1;
 }
+
 /* === PAGINATION === */
-.sh-pagination{
-    margin-top: 100px;
+.sh-pagination {
     gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.sh-pagination-two{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    gap: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.sh-pagination i{
+    display: none;
 }
-.sh-pagination-previous{
+
+
+.sh-pagination-previous {
     width: 10%;
     border: none;
     color: white;
@@ -411,10 +448,12 @@ td {
     font-size: 1rem;
     background: var(--btn-hover);
 }
-.sh-pagination-previous:hover{
+
+.sh-pagination-previous:hover {
     background: rgb(28, 98, 160);
 }
-.sh-pagination-next{
+
+.sh-pagination-next {
     width: 10%;
     border: none;
     color: white;
@@ -423,17 +462,26 @@ td {
     font-size: 1rem;
     background: var(--btn-hover);
 }
-.sh-pagination-next:hover{
+
+.sh-pagination-next:hover {
     background: rgb(28, 98, 160);
+    
 }
-.sh-pagination p{
+
+.sh-pagination p {
     font-size: 1rem;
     font-weight: bolder;
+    border: 1px solid #708090;
+    border-radius: 25px;
+    padding: 2px 5px;
 }
-.sh-pagination-two p{
-    font-size: 1rem;
-    font-weight: bolder;
+.sh-pagination p:hover{
+    background: var(--btn-hover);
+    color: white;
+    transition: ease-in-out;
+    cursor: pointer;
 }
+
 /* ==================== */
 .sh-mobile-navbar {
     display: none;
@@ -484,17 +532,20 @@ td {
     .sh-patients-section {
         padding: 10px;
         width: 100%;
-        height: 74vh;
+        max-height: 74vh;
         overflow-x: scroll;
         overflow-y: hidden;
     }
-    .sh-new-patients{
+
+    .sh-new-patients {
         padding: 10px;
         margin-top: 5px;
     }
+
     .sh-new-patients input {
         width: 50%;
     }
+
     .sh-patients-name {
         min-width: 300px;
     }
@@ -518,7 +569,8 @@ td {
     .sh-inspection {
         min-inline-size: 150px;
     }
-    .sh-pagination{
+
+    .sh-pagination {
         margin-top: 20px;
         margin-bottom: 10px;
         gap: 10px;
@@ -526,15 +578,20 @@ td {
         align-items: center;
         justify-content: center;
     }
-    .sh-pagination-two{
-        margin-top: 10px;
-        margin-bottom: 10px;
+    
+    .sh-pagination i{
+        display: block;
     }
-    .sh-pagination-previous{
-        width: 30%;
+    .sh-pagination span{
+        display: none;
     }
-    .sh-pagination-next{
-        width: 30%;
+
+    .sh-pagination-previous {
+        width: 10%;
+    }
+
+    .sh-pagination-next {
+        width: 10%;
     }
 
     .sh-footer-section {
@@ -558,7 +615,6 @@ td {
         align-items: center;
         justify-content: center;
         z-index: 9999;
-        margin-bottom: -4px ;
     }
 
     .sh-mobile-navbar ul {
@@ -576,14 +632,9 @@ td {
 
     .sh-mobile-navbar a {
         height: 100%;
-        padding: 0px 21px;
+        padding: 0px 20px;
         display: flex;
-        justify-content: center;
         align-items: center;
         color: var(--btn-bg-color);
-    }
-    .sh-mobile-navbar ul li a:hover{
-        background-color: var(--btn-hover);
-        color: white;
     }
 }
