--- a/src/css/appointment-details.css
+++ b/src/css/appointment-details.css
@@ -371,8 +371,9 @@ td {
     .sh-patients-section {
         padding: 10px;
         width: 100%;
-        height: 78vh;
-        overflow: hidden;
+        max-height: 78vh;
+        overflow-x: scroll;
+        overflow-y: hidden;
     }
 
     .sh-patients-name {
@@ -433,18 +434,19 @@ td {
         align-items: center;
         justify-content: center;
     }
-
-    .sh-pagination-two {
-        margin-top: 10px;
-        margin-bottom: 10px;
+    .sh-pagination i{
+        display: block;
+    }
+    .sh-pagination span{
+        display: none;
     }
 
     .sh-pagination-previous {
-        width: 30%;
+        width: 10%;
     }
 
     .sh-pagination-next {
-        width: 30%;
+        width: 10%;
     }
 
     .sh-mobile-navbar {
